# scp

./: .gitignore  CMakeLists.txt  CMakeLists.txti  Makefile  a.out  cmake_cuda.sh  csr.c  csr.h  fmt.c  fmt.h  hll.c  hll.h  hll_40  hll_test  main  main.c  mkinfo.c  omp_main_pytest.c  omp_main_test_hll.c  omp_main_time_csr.c  omp_main_time_hll.c  omp_test.c  omp_time.c  omp_time.h  omp_time.sh  omp_time_csr.sh  omp_time_hll.sh  plots.ipynb  result_csr_100.csv  results.csv_10.csv  spmv_openmp.c  spmv_openmp.h  spmv_seq.c  spmv_seq.h  temp_main.c  utils.c  utils.h  vec.c  vec.h
core/: csr.c  csr.h  fmt.c  fmt.h  hll.h  mmio.h  utils.c  utils.h  vec.c  vec.h
cuda/: CMakeLists.txt  Makefile  cmake_install.cmake  cuda_alloc.cu  cuda_mtx.cu  cuda_mtx.h  cuda_test.cu  cuda_test.h  cuda_test_csr.cu  cuda_test_hll.cu  cuda_test_hll.cu.save  cuda_time.cu  cuda_time.h  cuda_time_csr.cu  cuda_time_hll.cu  gpuinfo.cu  spmv_csr_cuda.cu  spmv_cuda.c  spmv_cuda.cu  spmv_cuda.cu.save.1  spmv_cuda.h  test.c
info/: mkinfo.c
omp/: omp_main_pytest.c  omp_main_test_csr.c  omp_main_time_csr.c  omp_main_time_hll.c  omp_profile_csr.c  omp_test.c  omp_test.h  omp_time.c  omp_time.h  seq_main_time_csr.c  seq_main_time_hll.c  seq_time.c  seq_time.h  spmv_openmp.c  spmv_openmp.h  spmv_seq.c  spmv_seq.h
omp_time_csr/: csr_1  csr_11  csr_16  csr_17  csr_21  csr_22  csr_24  csr_28  csr_29  csr_3  csr_30  csr_31  csr_33  csr_37  csr_38  csr_4  csr_6  csr_7  csr_9
omp_time_hll/: hll_12  hll_13  hll_16  hll_17  hll_18  hll_20  hll_21  hll_24  hll_26  hll_28  hll_29  hll_3  hll_31  hll_34  hll_35  hll_37  hll_38  hll_39  hll_4  hll_40  hll_5  hll_8
results/: 1827_csr_100.csv  7feb2_hll_100_32.csv  7feb_csr_100.csv  7feb_hll_100_32.csv  7feb_hll_omp  atomic_csr_100.csv  hll2_res_hll_100_32.csv  hll_res_hll_100_32.csv  hllv1_1701_hll_100_32.csv  hllv21731_hll_100_32.csv  man_red_csr_100.csv  new2_csr_100.csv  new_csr_100.csv  shmem1827_csr_100.csv  shmem1837_csr_100.csv  shmem2_csr_100.csv  shmem_csr_100.csv  shmem_csr_csr_100.csv  temp2_csr_100.csv  temp_csr_100.csv  test.csv  test_hll.csv  v1_csr_1000.csv  v2_csr_1000.csv  v3_csr_1000.csv  v4_csr_1000.csv
results/cuda/: csr_complete_csr_100.csv  csr_complete_csr_2.csv  csr_complete_csr_3.csv  feb06_csr_10.csv  feb06_csr_100.csv  feb06_hll_100_32.csv  feb06_hll_10_32.csv  hll_complete_21_feb_100_32.csv  hll_complete_hll_100_32.csv  hll_complete_hll_3_32.csv
results/cuda/csr/: v1_csr_1000.csv  v2_csr_1000.csv  v3_csr_1000.csv  v4_csr_1000.csv
results/cuda/hll/: v0_hll_1000_32.csv  v1_hll_1000_32.csv  v2_hll_1000_32.csv  v3_hll_1000_32.csv  v4_hll_1000_32.csv
results/mypc/static_nosimd/: csr_10  csr_11  csr_12  hll_10  hll_11  hll_12
results/mypc/static_simd/: csr_10  csr_11  csr_12  hll_10  hll_11  hll_12
results/omp/2024-02-07_12-18/: csr_1  csr_10  csr_11  csr_12  csr_13  csr_14  csr_15  csr_16  csr_17  csr_18  csr_19  csr_2  csr_20  csr_21  csr_22  csr_23  csr_24  csr_25  csr_26  csr_27  csr_28  csr_29  csr_3  csr_30  csr_31  csr_32  csr_33  csr_34  csr_35  csr_36  csr_37  csr_38  csr_39  csr_4  csr_40  csr_5  csr_6  csr_7  csr_8  csr_9
results/omp/csr/: csr_1.csv  csr_10.csv  csr_11.csv  csr_12.csv  csr_13.csv  csr_14.csv  csr_15.csv  csr_16.csv  csr_17.csv  (+31 more)
results/seq/: csr_1000.csv
results_csr/: results_csr_15.txt  results_csr_40.txt
results_csr_2024_01_17/: results_csr_10.txt  results_csr_30.txt  results_csr_35.txt
results_csr_2024_01_18/: results_csr_10.txt  results_csr_15.txt  results_csr_35.txt  results_csr_5.txt
results_openmp/results_csr_2024_01_17/: results_csr_25.txt
results_openmp/results_csr_2024_01_18/: results_csr_20.txt  results_csr_30.txt  results_csr_40.txt
test/: main.py
test/output/: 1138_bus.mtx.result  1138_bus.mtx.vector  3x3.mtx.result  3x3.mtx.vector  4x4.mtx.result  4x4.mtx.vector  af23560.mtx.result  af23560.mtx.vector  cage4.mtx.result  cage4.mtx.vector  mbeacxc.mtx.result  mbeacxc.mtx.vector  sym3.mtx.result  sym3.mtx.vector  sym4.mtx.result  sym4.mtx.vector
(+628 files in other folders)
